exlude ruff_cache from sync path
Signed-off-by: ast9501 <ast9501.cs10g@nctu.edu.tw>

--- a/devspace.yaml
+++ b/devspace.yaml
@@ -61,6 +61,7 @@ dev:
         printLogs: true
         excludePaths: 
           - .venv/
+          - .ruff_cache/
         #polling: true
         waitInitialSync: false
       - path: "${DEVSPACE_USER_HOME}/.ssh/:/root/.ssh"
